# convert_mp3

./: .gitignore  pyproject.toml  pytest.ini  requirements.txt  result.json  result2.json
.devcontainer/: Dockerfile  compose.yaml  devcontainer.json  initializeCommand.sh
.devcontainer/scripts/: postCreateCommand.sh
.devcontainer/scripts/impl/: init_py.sh
src/: MovieToSound.py  SoundToText.py  main.py
tests/: test_audio_extraction.py  test_cut_wav.py
