[project]
name = "test-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bitarray==2.9.3",
    "bitstring==4.2.3",
    "certifi==2024.8.30",
    "charset-normalizer==3.4.0",
    "ffmpeg-python==0.2.0",
    "ffmpeg==1.4",
    "ffprobe==0.5",
    "future==1.0.0",
    "gitdb==4.0.11",
    "gitpython==3.1.41",
    "idna==3.10",
    "iniconfig==2.0.0",
    "numpy==2.1.3",
    "packaging==24.1",
    "pluggy==1.5.0",
    "pydub==0.25.1",
    "pymp4parse==0.3.0",
    "pytest==8.3.3",
    "requests==2.32.3",
    "scipy==1.14.1",
    "setuptools==75.3.0",
    "six==1.16.0",
    "smmap==5.0.1",
    "speechrecognition==3.11.0",
    "standard-aifc==3.13.0",
    "typing-extensions==4.12.2",
    "urllib3==2.2.3",
]
